--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# Ignore Node.js modules
+/client/node_modules/
+/server/node_modules/
 
+# Ignore environment files
+/client/.env
+/server/.env
 
 # dependencies
 /node_modules
